--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -8,7 +8,6 @@
     text-decoration: none;
     color: #ffffff;
 
-
 }
 
 .portfolio__header {
@@ -33,20 +32,17 @@
     }
 
     &-toggle_menu {
-        top: 10rem;
-        right: 10rem;
+        position: relative;
+        z-index: 5;
         background-color: #0f43c7;
         border-radius: 0.425rem;
         display: none;
         flex-direction: column;
         gap: 1rem;
-        position: absolute;
         padding: 1rem 2rem;
         box-shadow: 0 0 4px 4px rgba(255, 255, 255, 0.8);
 
         li {
-            width: 100%;
-            text-align: center;
             border-bottom: 0.2px solid #ffffff;
 
             &:last-child {
@@ -130,7 +126,7 @@
 
 }
 
-@media screen and (max-width: 705px) {
+@media screen and (max-width: 768px) {
     .portfolio__header {
         &-central_items {
             display: none;
@@ -140,24 +136,4 @@
         }
     }
 
-}
-
-@media screen and (max-width: 550px) {
-    .portfolio__header {
-
-        &-toggle_menu {
-            right: 2rem;
-        }
-
-    }
-}
-
-@media screen and (max-width: 375px) {
-    .portfolio__header {
-        &-toggle_menu {
-            position: fixed;
-            right: 0;
-            width: 100%;
-        }
-    }
 }
