--- a/src/components/Habilities/styles.scss
+++ b/src/components/Habilities/styles.scss
@@ -18,7 +18,12 @@
             flex: 0.7;
             flex-wrap: wrap;
             align-items: center;
+            justify-content: center;
             gap: 1rem;
+
+            img{
+                height: 151px;
+            }
         }
     }
 }
