--- a/src/components/IAm/styles.scss
+++ b/src/components/IAm/styles.scss
@@ -1,31 +1,27 @@
 .portfolio__iam {
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    flex-direction: row;
-    // position: absolute;
+    justify-content: center;
     flex-wrap: wrap;
-    top: 10rem;
-    right: 0;
     width: 100%;
+    margin-top: 4rem;
+    gap: 12rem;
 
     h1 {
         font-family: "Montserrat", sans-serif;
-        flex: 0.7;
         line-height: 3.5rem;
-        text-align: justify;
+        width: 48%;
     }
-    
+
     &-functions {
         color: #0148FF;
-        // display: flex;
+        display: flex;
+        flex-direction: column;
+        
         span {
-            overflow: hidden;
-            border-radius: 4px;
-            // border-right: 5px solid #0148FF;
-            // animation: changeWidthSpan 700ms ease-out 1 forwards;
-            // animation: bright nessSpan 400ms ease-in-out infinite 1s;
-            
+            border-right: 2px solid #0148FF;
+            padding-right: 2px;
+            animation: changeWidth 500ms nromal 1s infinite;
         }
     }
 
@@ -34,24 +30,47 @@
             max-width: 100%;
             height: 450px;
             border-radius: 20px;
+            text-align: center;
         }
     }
 }
 
-@keyframes brightnessSpan{
-    0%{
+@keyframes brightnessSpan {
+    0% {
         border-right-color: #0148FF;
     }
-    100%{
+
+    100% {
         border-right-color: transparent;
     }
 }
 
-@keyframes changeWidthSpan{
-    0%{
+@keyframes changeWidth {
+    0% {
         width: 0;
     }
-    100%{
+
+    100% {
+        width: 35%;
+    }
+}
+
+@keyframes changeWidthSpan2 {
+    0% {
+        width: 0;
+    }
+
+    100% {
+        width: 45%;
+    }
+}
+
+@keyframes changeWidthSpan3 {
+    0% {
+        width: 0;
+    }
+
+    100% {
         width: 65%;
     }
 }
