FIX: Change slider

--- a/src/App.scss
+++ b/src/App.scss
@@ -44,3 +44,12 @@
     justify-content: center;
     gap: 0.2rem;
 }
+
+
+.radioBtn{
+    border: 10px solid #0148FF;
+    width: 20px;
+    height: 20px;
+    border: none;
+    outline: none;
+}
