--- a/src/components/AboutMe/styles.scss
+++ b/src/components/AboutMe/styles.scss
@@ -19,13 +19,46 @@
             }
         }
         
-        &-texts {
+        &-slider{
             flex: 1;
-            line-height: 32px;
-            text-align: justify;
-            
-            h2{
-                width: 70%;
+            display: flex;
+            flex-direction: column;
+            &-texts {
+                line-height: 32px;
+                text-align: justify;
+                display: flex;
+                position: relative;
+                height: 10rem;
+                
+                h2{
+                    position: absolute;
+                    width: 80%;
+                    overflow: hidden;
+                    background-color: #0148FF;
+                    color: #ffffff;
+                    border-radius: 20px;
+                    padding: 1rem;
+                    transition: 1s;
+                }
+            }
+
+            &-buttons{
+                display: flex;
+                align-items: center;
+                margin: 10rem;
+                gap: 10px;
+
+                .slide1 ~ #slide1:checked {
+                    z-index: 5;
+                }             
+                
+                #slide2:checked ~ .slide2{
+                    z-index: 10;
+                }             
+                
+                #slide3:checked ~ .slide3{
+                    z-index: 10;
+                }                
             }
         }
     }
