--- a/src/components/AboutMe/styles.scss
+++ b/src/components/AboutMe/styles.scss
@@ -13,9 +13,9 @@
             min-height: 750px;
             display: flex;
             justify-content: center;
-            
+
             img {
-                max-width: 359px;
+                max-width: 100%;
             }
         }
         
