--- a/src/components/Projects/styles.scss
+++ b/src/components/Projects/styles.scss
@@ -14,6 +14,7 @@
             box-shadow: 0 0 4px 2px #0148FF;
             border-radius: 20px;
             padding-bottom: 2rem;
+            background-color: #ffffff;
             img{
                 border-top-left-radius: 20px;
                 border-top-right-radius: 20px;
